Mon Jun  9 11:30:36 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_union/union_cs.cpp:

          Removed check for non-locality in conditional typecode generation.
          This one was overlooked in the general removal of these checks
          some time ago. Thanks to Anand <anand@iCMGworld.com> for reporting
          the bug.

Mon Jun  9 10:09:52 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/Makefile.bor:
          Added SCIOP files.

        * tao/Strategies/SCIOP_Acceptor.h:
        * tao/Strategies/SCIOP_Connection_Handler.h:
        * tao/Strategies/SCIOP_Connector.h:
        * tao/Strategies/SCIOP_Endpoint.h:
        * tao/Strategies/sciop_endpoints.h:
        * tao/Strategies/SCIOP_Factory.h:
        * tao/Strategies/SCIOP_Lite_Factory.h:
        * tao/Strategies/SCIOP_Profile.h:
        * tao/Strategies/SCIOP_Transport.h:
          Changed TAO_Export to TAO_Strategies_Export to correctly
          export/import these classes from a DLL. Added missing includes
          to pickup these defines.

Sun Jun  8 23:21:45 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/ComponentDef_i.cpp:
        * orbsvcs/orbsvcs/IFRService/EventPortDef_i.cpp:
        * orbsvcs/orbsvcs/IFRService/EventPortDef_i.h:
        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp:
        * orbsvcs/orbsvcs/IFRService/ProvidesDef_i.cpp:
        * orbsvcs/orbsvcs/IFRService/ProvidesDef_i.h:
        * orbsvcs/orbsvcs/IFRService/UsesDef_i.cpp:
        * orbsvcs/orbsvcs/IFRService/UsesDef_i.h:
        * orbsvcs/orbsvcs/IFRService/ValueDef_i.cpp:
        * orbsvcs/orbsvcs/IFRService/ValueMemberDef_i.cpp:
        * orbsvcs/orbsvcs/IFRService/ValueMemberDef_i.h:

	  More changes toward support of components, valuetypes and eventtypes
	  in the IFR.

Sun Jun  8 18:50:29 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/Sequence_Latency/Single_Threaded: New test for