@@ -1,4 +1,4 @@
-#include "SCIOP_Endpoint.h"
+ #include "SCIOP_Endpoint.h"
 #include "tao/debug.h"
 
 #if TAO_HAS_SCIOP == 1
@@ -15,49 +15,51 @@ ACE_RCSID (tao,
 
 TAO_SCIOP_Endpoint::TAO_SCIOP_Endpoint (const ACE_INET_Addr &addr,
                                       int use_dotted_decimal_addresses)
-  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE),
-    host_ (),
-    port_ (683),  // default port (IANA assigned)
-    object_addr_ (addr),
-    object_addr_set_ (0),
-    next_ (0)
+  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE)
+    , host_ ()
+    , port_ (683)  // default port (IANA assigned)
+    , object_addr_ (addr)
+    , object_addr_set_ (0)
+    , next_ (0)
 {
   this->set (addr, use_dotted_decimal_addresses);
 }
 
 TAO_SCIOP_Endpoint::TAO_SCIOP_Endpoint (const char *host,
-                                      CORBA::UShort port,
-                                      const ACE_INET_Addr &addr)
-  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE),
-    host_ (),
-    port_ (port),
-    object_addr_ (addr),
-    object_addr_set_ (0),
-    next_ (0)
+                                        CORBA::UShort port,
+                                        const ACE_INET_Addr &addr,
+                                        CORBA::Short priority)
+  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE,
+                  priority)
+    , host_ ()
+    , port_ (port)
+    , object_addr_ (addr)
+    , object_addr_set_ (0)
+    , next_ (0)
 {
   if (host != 0)
     this->host_ = host;
 }
 
 TAO_SCIOP_Endpoint::TAO_SCIOP_Endpoint (void)
-  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE),
-    host_ (),
-    port_ (683),  // default port (IANA assigned)
-    object_addr_ (),
-    object_addr_set_ (0),
-    next_ (0)
+  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE)
+    , host_ ()
+    , port_ (683)  // default port (IANA assigned)
+    , object_addr_ ()
+    , object_addr_set_ (0)
+    , next_ (0)
 {
 }
 
 TAO_SCIOP_Endpoint::TAO_SCIOP_Endpoint (const char *host,
                                       CORBA::UShort port,
                                       CORBA::Short priority)
-  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE),
-    host_ (),
-    port_ (port),
-    object_addr_ (),
-    object_addr_set_ (0),
-    next_ (0)
+  : TAO_Endpoint (TAO_TAG_SCIOP_PROFILE)
+    , host_ ()
+    , port_ (port)
+    , object_addr_ ()
+    , object_addr_set_ (0)
+    , next_ (0)
 {
   if (host != 0)
     this->host_ = host;
@@ -126,14 +128,6 @@ TAO_SCIOP_Endpoint::host (const char *h)
   return this->host_.in ();
 }
 
-void
-TAO_SCIOP_Endpoint::reset_hint (void)
-{
-  // Commented out for the time being....
-  /*  if (this->hint_)
-      this->hint_->cleanup_hint ((void **) &this->hint_); */
-}
-
 TAO_Endpoint *
 TAO_SCIOP_Endpoint::next (void)
 {
@@ -143,18 +137,13 @@ TAO_SCIOP_Endpoint::next (void)
 TAO_Endpoint *
 TAO_SCIOP_Endpoint::duplicate (void)
 {
-  // @@ Bala, we probably need to make sure that the duplicate has the
-  // same priority as the original.  Although it does not matter in
-  // the context this method is currently used, if somebody ends up
-  // using this method for some other purpose later, this will be a
-  // seed for bugs.
-
   TAO_SCIOP_Endpoint *endpoint = 0;
 
   ACE_NEW_RETURN (endpoint,
                   TAO_SCIOP_Endpoint (this->host_.in (),
-                                     this->port_,
-                                     this->object_addr_),
+                                      this->port_,
+                                      this->object_addr_,
+                                      this->priority ()),
                   0);
 
   return endpoint;
@@ -183,6 +172,48 @@ TAO_SCIOP_Endpoint::hash (void)
   // host byte order.  As such, this implementation is actually less
   // costly.
   return this->object_addr ().get_ip_address () + this->port ();
+}
+
+const ACE_INET_Addr &
+TAO_SCIOP_Endpoint::object_addr (void) const
+{
+  // The object_addr_ is initialized here, rather than at IOR decode
+  // time for several reasons:
+  //   1. A request on the object may never be invoked.
+  //   2. The DNS setup may have changed dynamically.
+  //   ...etc..
+
+  // Double checked locking optimization.
+  if (!this->object_addr_set_)
+    {
+      ACE_GUARD_RETURN (TAO_SYNCH_MUTEX,
+                        guard,
+                        this->addr_lookup_lock_,
+                        this->object_addr_);
+
+      if (!this->object_addr_set_)
+        {
+          if (this->object_addr_.set (this->port_,
+                                      this->host_.in ()) == -1)
+            {
+              // If this call fails, it most likely due a hostname
+              // lookup failure caused by a DNS misconfiguration.  If
+              // a request is made to the object at the given host and
+              // port, then a CORBA::TRANSIENT() exception should be
+              // thrown.
+
+              // Invalidate the ACE_INET_Addr.  This is used as a flag
+              // to denote that ACE_INET_Addr initialization failed.
+              this->object_addr_.set_type (-1);
+            }
+          else
+            {
+              this->object_addr_set_ = 1;
+            }
+        }
+    }
+
+  return this->object_addr_;
 }
 
 #endif /* TAO_HAS_SCIOP == 1 */
