@@ -56,8 +56,9 @@ public:
   /// Constructor.  This is the most efficient constructor since it
   /// does not require any address resolution processing.
   TAO_SCIOP_Endpoint (const char *host,
-                     CORBA::UShort port,
-                     const ACE_INET_Addr &addr);
+                      CORBA::UShort port,
+                      const ACE_INET_Addr &addr,
+                      CORBA::Short priority = TAO_INVALID_PRIORITY);
 
   /// Constructor.
   TAO_SCIOP_Endpoint (const ACE_INET_Addr &addr,
@@ -76,9 +77,6 @@ public:
 
   virtual TAO_Endpoint *next (void);
   virtual int addr_to_string (char *buffer, size_t length);
-  virtual void reset_hint (void);
-
-  /// Makes a copy of <this>
   virtual TAO_Endpoint *duplicate (void);
 
   /// Return true if this endpoint is equivalent to <other_endpoint>.  Two
